# netseer_paper

./: .gitignore  NAMESPACE  README.md  netseer.Rproj  pyproject.toml
R/: graph_generation.R
man/: generate_graph_exp.Rd  generate_graph_linear.Rd
netseer-py/: README.md  pyproject.toml
netseer-py/data/: graph_1.gml  graph_10.gml  graph_14.gml  graph_16.gml  graph_17.gml  graph_20.gml  graph_3.gml  graph_4.gml  graph_6.gml  graph_8.gml
netseer-py/docs/: index.md  references.md
netseer-py/docs/stylesheets/: extra.css
netseer-py/src/netseer/: __init__.py  forecasting.py  functions.py  graph_generation.py  measure_error.py  network_prediction.py  read_graphs.py  utils.py
netseer-r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md  README_BACKUP_26983.md  README_LOCAL_26983.md  README_REMOTE_26983.md  _pkgdown.yml
netseer-r/R/: functions.R  graph_generation.R  measure_error.R  network_prediction.R  read_graphs.R  syngraphs-data.R  utils.R
netseer-r/data/: graph_11.gml  graph_12.gml  graph_13.gml  graph_15.gml  graph_18.gml  graph_19.gml  graph_2.gml  graph_5.gml  graph_7.gml  graph_9.gml  syngraphs.rda
netseer-r/inst/: CITATION
netseer-r/inst/extdata/: graph1.gml  graph3.gml
netseer-r/man/: generate_graph_list.Rd  load_graphs.Rd  load_graphs_dir.Rd  load_graphs_list.Rd  measure_error.Rd  read_graph_list.Rd  save_graphs.Rd
netseer-r/vignettes/: bibliography.bib  netseer.Rmd
old/: README.md
old/old_netseer-py/: README.md  mkdocs.yml  pyproject.toml
old/old_netseer-py/src/netseer/: __init__.py  graph_generation.py
old/old_netseer-py/tests/: test_measure_error.py
old/old_netseer-r/: netseer.Rproj
old/old_netseer-r/R/: measure_error.R  read_graphs.R
old/old_netseer-r/man/: generate_graph_list.Rd  (+3 more)
old/old_paper/: README.md  paper.bib
paper/: README.md  paper.bib  paper.md
src/netseer/: generate_graph.py  netseer.py
vignettes/: bibliography.bib
(+4 files in other folders)
