[project]
name = "netseer"
version = "0.1.1"
description = "Predicting graph structure from a time series of graphs"
readme = "README.md"
authors = [
  { name = "Stefan Westerlund" },
  { name = "Brodie Oldfield", email = "Brodie.Oldfield@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
  "igraph>=0.11.9",
  "matplotlib>=3.10.8",
  "natsort>=8.4.0",
  "pathlib>=1.0.1",
  "pulp>=3.2.1",
  "statsforecast>=2.0.2",
  "statsmodels>=0.14.5",
]

[project.scripts]
random = "netseer.netseer:random"

[project.urls]
Homepage = "https://github.com/sevvandi/netseer-python"
Issues = "https://github.com/sevvandi/netseer-python/issues"
Documentation = "https://sevvandi.github.io/netseer-python/"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.15",
  "mkdocs-to-pdf>=0.10.1",
  "mkdocstrings[python]>=0.29.1",
  "pytest>=9.0.2",
]
